added swagger file for company handler
